--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: EssentialsPE
 main: EssentialsPE\Loader
 version: 3.0.0-rewrite2
-api: [3.0.0-ALPHA11, 3.0.0-ALPHA12]
+api: [3.0.0, 3.0.0-ALPHA12, 4.0.0]
 author: VMPE Development Team
 website: Not showing.
 
